# magnetometer-calibration

./: CMakeLists.txt  magnetometer_calibrate.cpp  readme.md
data/: shape8_at_dusk.txt
